// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page should render with navigation context 1`] = `
<DocumentFragment>
  <div
    class="css-w3nefz"
  >
    <div
      class="css-tbczne"
      data-testid="NavigationBarMobile"
    >
      <div
        class="border-t border-theme-secondary-300 dark:border-theme-secondary-900"
        data-testid="NavigationBar__buttons-separator"
      />
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--receive"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                dashboard.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--send"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sent.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="css-1ovuwx0"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1v0i3m7"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  arkvault-logo.svg
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="mr-auto ml-4 hidden h-21 space-x-8 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none active"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="mr-auto ml-2 flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  type="button"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      menu.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--server-status"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-success-700"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--receive"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--send"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="my-auto mx-4 hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="-mt-3 flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 py-2.5 px-8 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                data-testid="UserMenu"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        data-testid="Content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page should render with navigation context 2`] = `
<DocumentFragment>
  <div
    class="css-kmmje1"
  >
    <div
      class="css-1mnbipv"
      data-testid="NavigationBarMobile"
    >
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--receive"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                dashboard.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--send"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sent.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="css-1ovuwx0"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1v0i3m7"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  arkvault-logo.svg
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="mr-auto ml-4 hidden h-21 space-x-8 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none active"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="mr-auto ml-2 flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  type="button"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      menu.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--server-status"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-success-700"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--receive"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--send"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="my-auto mx-4 hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="-mt-3 flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 py-2.5 px-8 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                data-testid="UserMenu"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        data-testid="Content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page should render with navigation context 3`] = `
<DocumentFragment>
  <div
    class="css-kmmje1"
  >
    <div
      class="css-1mnbipv"
      data-testid="NavigationBarMobile"
    >
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--receive"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                dashboard.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--send"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sent.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="css-1ovuwx0"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1v0i3m7"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  arkvault-logo.svg
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="mr-auto ml-4 hidden h-21 space-x-8 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none active"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="mr-auto ml-2 flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  type="button"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      menu.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--server-status"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-success-700"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--receive"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--send"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="my-auto mx-4 hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="-mt-3 flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 py-2.5 px-8 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                data-testid="UserMenu"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        data-testid="Content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page should render with sidebar = false 1`] = `
<DocumentFragment>
  <div
    class="css-kmmje1"
  >
    <div
      class="css-1mnbipv"
      data-testid="NavigationBarMobile"
    >
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--receive"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                dashboard.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--send"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sent.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="css-1ovuwx0"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1v0i3m7"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  arkvault-logo.svg
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="mr-auto ml-4 hidden h-21 space-x-8 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none active"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="mr-auto ml-2 flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  type="button"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      menu.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--server-status"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-success-700"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--receive"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--send"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="my-auto mx-4 hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="-mt-3 flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 py-2.5 px-8 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                data-testid="UserMenu"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    />
  </div>
</DocumentFragment>
`;

exports[`Page should render with sidebar = true 1`] = `
<DocumentFragment>
  <div
    class="css-kmmje1"
  >
    <div
      class="css-1mnbipv"
      data-testid="NavigationBarMobile"
    >
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--receive"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                dashboard.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="cursor-not-allowed text-theme-secondary-500 css-127bt7l"
          data-testid="NavigationBar__buttons__mobile--send"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sent.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="css-1ovuwx0"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1v0i3m7"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  arkvault-logo.svg
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="mr-auto ml-4 hidden h-21 space-x-8 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none active"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="mr-auto ml-2 flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  type="button"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      menu.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--server-status"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-success-700"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--receive"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-127bt7l"
                    data-testid="NavigationBar__buttons--send"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="my-auto mx-4 hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="-mt-3 flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 py-2.5 px-8 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                data-testid="UserMenu"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="flex flex-1"
      >
        <div
          class="mx-auto flex w-full flex-col lg:container lg:flex-row"
        >
          <div
            class="mt-8 border-theme-primary-100 px-8 dark:border-theme-secondary-800 md:px-10 lg:mb-8 lg:border-r lg:px-12"
          />
          <div
            class="w-full"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
